objects/Verba_Adicional_VAD__c.object
<CustomObject>
    <description>Onda 02 - Tabela de verba adicional utilizada no processo de verba SCV</description>
    <fields>
        <fullName>Codigo_AN8_Cliente__c</fullName>
        <label>Código AN8 (Cliente)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Codigo_Canal__c</fullName>
        <label>Código Canal</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Empresa__c</fullName>
        <label>Código Empresa</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Codigo_Sub_Canal__c</fullName>
        <label>Código Sub-Canal</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_da_Bandeira__c</fullName>
        <label>Código da Bandeira</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_da_Organizacao__c</fullName>
        <label>Código da Organização</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_da_Regional__c</fullName>
        <label>Código da Regional</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_do_Pais__c</fullName>
        <label>Código do País</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_da_VAD__c</fullName>
        <label>Número da VAD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentual_do_Cliente__c</fullName>
        <label>Percentual do Cliente</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Verba Adicional VAD</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Verba</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verba Adicional VAD</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>